--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,13 +36,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        test-type: [MutualAuth]
+        test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
+        python-version: [ '2.x', '3.x' ]
         #[MutualAuth, Websocket, ALPN]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.6'
+          python-version: ${{ matrix.python-version }}
       - name: Integration tests
         run: |
           pip install pytest
