--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,4 @@ jobs:
           pip install pytest
           pip install mock
           pip install boto3
-          ./test-integration/run/run.sh IoTPySDK ${{ matrix.test-type }} 1000 100 7
+          ./test-integration/run/run.sh ${{ matrix.test-type }} 1000 100 7
