--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       fail-fast: false
       matrix:
         test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
-        python-version: [ '2.x', '3.x' ]
+        python-version: [ '3.x' ]
         #[MutualAuth, Websocket, ALPN]
     steps:
       - uses: actions/checkout@v2
@@ -49,4 +49,8 @@ jobs:
           pip install pytest
           pip install mock
           pip install boto3
-          ./test-integration/run/run.sh ${{ matrix.test-type }} 1000 100 7
+          ./test-integration/run/run.sh MutualAuth 1000 100 7
+          ./test-integration/run/run.sh MutualAuthT 1000 100 7
+          ./test-integration/run/run.sh Websocket 1000 100 7
+          ./test-integration/run/run.sh ALPN 1000 100 7
+          ALPNT
