--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
+        #test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
         python-version: [ '3.x' ]
         #[MutualAuth, Websocket, ALPN]
     steps:
