use concurrency to prevent github CI run simultaneously

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,14 @@ jobs:
           python3 -m pytest test
 
   integration-tests:
+    concurrency: 
+      group: ${{ github.head_ref || github.run_id }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        #test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
-        python-version: [ '3.x' ]
+        test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
+        python-version: [ '2.x', '3.x' ]
         #[MutualAuth, Websocket, ALPN]
     steps:
       - uses: actions/checkout@v2
@@ -49,8 +51,4 @@ jobs:
           pip install pytest
           pip install mock
           pip install boto3
-          ./test-integration/run/run.sh MutualAuth 1000 100 7
-          ./test-integration/run/run.sh MutualAuthT 1000 100 7
-          ./test-integration/run/run.sh Websocket 1000 100 7
-          ./test-integration/run/run.sh ALPN 1000 100 7
-          ./test-integration/run/run.sh ALPNT 1000 100 7
+          ./test-integration/run/run.sh ${{ matrix.test-type }} 1000 100 7
