--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
   integration-tests:
     concurrency: 
-      group: ${{ github.head_ref || github.run_id }}
+      group: integration-test
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
