update cancle in process option

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
   integration-tests:
     concurrency: 
       group: integration-test
+      cancel-in-progress: false
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
