--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,23 @@ jobs:
           pip install pytest
           pip install mock
           python3 -m pytest test
+
+  integration-tests:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
+        python-version: [ '2.x', '3.x' ]
+        #[MutualAuth, Websocket, ALPN]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Integration tests
+        run: |
+          pip install pytest
+          pip install mock
+          pip install boto3
+          ./test-integration/run/run.sh ${{ matrix.test-type }} 1000 100 7
