--- a/continuous-delivery/publish_to_test_pypi.yml
+++ b/continuous-delivery/publish_to_test_pypi.yml
@@ -18,7 +18,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - python3 setup.py sdist bdist_wheel
+      - python3 setup.py sdist bdist_wheel --universal
       - python3 -m twine upload -r testpypi dist/*
   post_build:
     commands:
