--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,10 @@ jobs:
       fail-fast: false
       matrix:
         test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
-        python-version: [ '2.7', '3.5', '3.7', '3.12' ]
+        python-version: [ '3.5', '3.7', '3.12' ]
     steps:
       - uses: actions/checkout@v4
-      - uses: LizardByte/setup-python-action@v2024.202.205923
+      - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
       - name: Integration tests
