--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       fail-fast: false
       matrix:
         test-type: [ MutualAuth, MutualAuthT , Websocket, ALPN, ALPNT]
-        python-version: [ '3.5', '3.7', '3.12' ]
+        python-version: [ '3.7', '3.12' ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v2
