--- a/continuous-delivery/publish_to_test_pypi.yml
+++ b/continuous-delivery/publish_to_test_pypi.yml
@@ -10,7 +10,7 @@ phases:
       - python3 -m pip install --user --upgrade twine setuptools wheel awscli PyOpenSSL six
   pre_build:
     commands:
-      - pypirc=$(aws secretsmanager get-secret-value --secret-id "alpha/aws-crt-python/.pypirc" --query "SecretString" | cut -f2 -d\") && echo "$pypirc" > ~/.pypirc
+      - pypirc=$(aws secretsmanager get-secret-value --secret-id "alpha/aws-sdk-python-v1/.pypirc" --query "SecretString" | cut -f2 -d\") && echo "$pypirc" > ~/.pypirc
       - cd aws-iot-device-sdk-python
       - export PKG_VERSION=$(git describe --tags | cut -f2 -dv)
       - echo "Updating package version to ${PKG_VERSION}"
