--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ on:
 
 env:
   RUN: ${{ github.run_id }}-${{ github.run_number }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_DEFAULT_REGION: us-east-1
+  CI_SDK_V1_ROLE: arn:aws:iam::123124136734:role/CI_SDK_V1_ROLE
   PACKAGE_NAME: aws-iot-device-sdk-python
   AWS_EC2_METADATA_DISABLED: true
 
@@ -41,8 +41,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+      - uses: aws-actions/configure-aws-credentials@v2
         with:
           python-version: ${{ matrix.python-version }}
+          role-to-assume: ${{ env.CI_SDK_V1_ROLE }}
+          aws-region: ${{ env.AWS_DEFAULT_REGION }}
       - name: Integration tests
         run: |
           pip install pytest
