--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ env:
   RUN: ${{ github.run_id }}-${{ github.run_number }}
   AWS_DEFAULT_REGION: us-east-1
   CI_SDK_V1_ROLE: arn:aws:iam::123124136734:role/CI_SDK_V1_ROLE
+  CI_PUBSUB_ROLE: arn:aws:iam::180635532705:role/CI_PubSub_Role
   PACKAGE_NAME: aws-iot-device-sdk-python
   AWS_EC2_METADATA_DISABLED: true
 
@@ -33,6 +34,9 @@ jobs:
 
   integration-tests:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
     strategy:
       fail-fast: false
       matrix:
@@ -45,7 +49,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ env.CI_SDK_V1_ROLE }}
+          role-to-assume: ${{ env.CI_PUBSUB_ROLE }}
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
       - name: Integration tests
         run: |
